--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "socket.io": "^4.8.1"
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.0.5",
+    "uuidv4": "^6.2.13"
   }
 }
